WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237505
[iOS] Layer tree can get indefinitely frozen if WKWebView is unparented underneath -[UIWindow dealloc]
https://bugs.webkit.org/show_bug.cgi?id=237505
Summary
[iOS] Layer tree can get indefinitely frozen if WKWebView is unparented under...
Wenson Hsieh
Reported
2022-03-05 16:38:20 PST
rdar://85563958
Attachments
For EWS
(11.92 KB, patch)
2022-03-05 17:06 PST
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix macOS build
(11.98 KB, patch)
2022-03-05 17:12 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-03-05 17:06:21 PST
Comment hidden (obsolete)
Created
attachment 453924
[details]
For EWS
Wenson Hsieh
Comment 2
2022-03-05 17:12:17 PST
Created
attachment 453925
[details]
Fix macOS build
Wenson Hsieh
Comment 3
2022-03-06 08:58:02 PST
Comment on
attachment 453925
[details]
Fix macOS build Thanks for the review!
EWS
Comment 4
2022-03-06 09:40:45 PST
Committed
r290875
(
248106@main
): <
https://commits.webkit.org/248106@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453925
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug